--- a/src/component/LocationSelector.module.css
+++ b/src/component/LocationSelector.module.css
@@ -18,8 +18,12 @@ p {
   display: flex;
   align-items: baseline;
   font-size: 20px;
-  gap: 10px;
+  gap: 5px;
   margin-top: 20px;
+  font-weight: 500;
+}
+p strong {
+  font-size: 24px;
 }
 p span {
   color: gray;
